--- a/wp-content/themes/redstarter/sass/_header.scss
+++ b/wp-content/themes/redstarter/sass/_header.scss
@@ -1,8 +1,8 @@
 /*--------------------------------------------------------------
 # header logo social media
 --------------------------------------------------------------*/
-.entry-header {
-	padding: 40px 0px 0px 0px;
+.entry-header, .page-header {
+	padding: 3em 0em 0em 0em;
 }
 
 .nav-wrapper {
