--- a/wp-content/themes/redstarter/sass/_footer.scss
+++ b/wp-content/themes/redstarter/sass/_footer.scss
@@ -9,6 +9,10 @@
 .footer-contact a:hover {
     color:#FFF;
 }
+.hours {
+    font-weight:700;
+    color:#FFF;
+}
 
 .site-footer {
     margin:0 auto;
@@ -17,7 +21,7 @@
     height:250px;
 }
 
-.footer-contact p, .footer-hours p, span .hours {
+.footer-contact p, .footer-hours p {
     color:#FFF;
     font-size:1rem;
     margin:0;
@@ -47,7 +51,7 @@
     margin:0;
     padding:0;
     padding-right: 5px;
-    color:#FFFFFF;
+    color:#FFF;
 }
 
 .footer-contact ul {
@@ -72,7 +76,7 @@
 
 .footer-hours {
     text-align:left;
-    padding: 30px 0 30px 44px;
+    padding: 30px 0 30px 30px;
     flex:1 0 25%;
 }
 
