--- a/wp-content/themes/redstarter/sass/_front-page.scss
+++ b/wp-content/themes/redstarter/sass/_front-page.scss
@@ -39,8 +39,9 @@
     padding:1em 1em 1em 1em;
     border-radius: 4px;
     background-color:#222;
+    text-align:center;
     color:#FFF;
-    width:280px;
+    width:180px;
 }
 
 .front-page-btn a {
@@ -48,11 +49,20 @@
 }
 
 .products-cta {
+
     background-color: #fafafa;
     border: 1px solid #e1e1e1;
     padding: 1.5rem;
     margin: 3em auto 3em auto;
     width: 1024px;
+}
+
+.products-cta p {
+    display:flex;
+    justify-content: space-between;
+}
+.products-cta span {
+    margin-top: 14px;
 }
 
 .category-images p {
@@ -121,12 +131,10 @@ hr.divider::after {
 }
 
 .news-post-loop li {
-    box-shadow:1px 1px 1px 1px #ccc;
+      box-shadow:1px 1px 1px 1px #ccc;
+      list-style: none;
 }
 
-.news-post-loop li {
-    list-style: none;
-}
 .news-loop-title .entry-meta {
     padding: 0px 0px 10px 10px;
     font-size: .9em;
